# ClearML-Demo

./: .gitignore  ClearML.pptx  pyproject.toml  requirements.txt
src/Core Features/Pipeline/AirBnb_predict/: prediction.py  prediction_cleaned.py  prediction_experiment.ipynb  prediction_integrated.py  prediction_naive.ipynb  prediction_naive.py  retrieve_data.py  sdk_monitoring.py
src/Core Features/Pipeline/CatsvsDogs/: data_preprocessing.py  model_fit.py
src/Core Features/Pipeline/CatsvsDogs/data/: data_retrieval.py
src/Core Features/Pipeline/Fashion/: basic_pipeline.py  classification.ipynb  data_ingestion.py  model_evaluation.py  model_train.py  optimize.py  pipeline_controller.py  sdk_monitoring.py  test.ipynb  train.py  trigger.py
src/Core Features/Pipeline/Fashion/data/: data_creation.py  dataset_genealogy.py
src/FashionMNIST/DataManagement/: retrieve_data_artifact.py
src/FashionMNIST/Notebooks/: test.ipynb
src/FashionMNIST/Pipeline/DecoratorPipeLine/: MNIST Convnet.py
src/Pipeline Examples/Notebooks/: test.ipynb
src/Pipeline Examples/Pipeline/AirBnb_predict/: prediction.py
src/Pipeline Examples/Pipeline/Fashion/: MNIST Convnet.py  pipeline_controller.py
src/Pipeline Examples/Pipeline/Fashion/data/: data_creation.py  dataset_genealogy.py
src/Toy Model Deployment/: model_deployment.md  params.txt  preprocess.py  train_model.py
