[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Florian Natterer <natterer.flo99@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
clearml = "^1.4.0"
optuna = "^2.10.0"
tensorflow = "^2.8.0"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
keras = "^2.8.0"
jupyter = "^1.0.0"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
